--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
-    "botkit": "^0.5",
+    "botkit": "0.7.4",
     "dashbot": "0.7.4",
     "debug": "^2.3.3",
     "express": "^4.14.0",
@@ -31,6 +31,6 @@
     "chatbots",
     "slack"
   ],
-  "author": "ben@howdy.ai",
+  "author": "dennis@dashbot.io",
   "license": "ISC"
 }
