--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "botkit-starter-slack",
+  "name": "dashbot-botkit-starter-slack",
   "version": "0.0.2",
   "description": "A starter kit for building a custom Slack bot with Botkit Studio",
   "main": "bot.js",
