--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dashbot": "0.7.4",
     "debug": "^2.3.3",
     "express": "^4.14.0",
-    "node-env-file": "^0.1.8",
+    "dotenv": "^7.0.0",
     "querystring": "^0.2.0",
     "request": "^2.79.0",
     "wordfilter": "^0.2.6"
