--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "request": "^2.79.0",
     "wordfilter": "^0.2.6",
     "botkit-storage-mongo": "^1.0.7",
-    "mongoose": "^5.6.11"
+    "mongoose": "^5.6.11",
+    "lodash": "^4.17.15",
+    "q": "^2.0.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "author": "dennis@dashbot.io",
