--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^5.6.11",
     "lodash": "^4.17.15",
     "q": "^2.0.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "axios": "^0.19.0"
   },
   "devDependencies": {},
   "author": "dennis@dashbot.io",
