--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -1,4 +1,5 @@
 dependencies:
+  axios: 0.19.0
   body-parser: 1.18.3
   botkit: 0.7.4
   botkit-storage-mongo: 1.0.7
@@ -3887,6 +3888,7 @@ registry: 'https://registry.npmjs.org/'
 shrinkwrapMinorVersion: 9
 shrinkwrapVersion: 3
 specifiers:
+  axios: ^0.19.0
   body-parser: ^1.15.2
   botkit: 0.7.4
   botkit-storage-mongo: ^1.0.7
