--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lodash": "^4.17.15",
     "q": "^2.0.3",
     "path": "^0.12.7",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "rss-parser": "^3.7.2"
   },
   "devDependencies": {},
   "author": "dennis@dashbot.io",
