--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "start": "node bot.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.15.2",
     "botkit": "0.7.4",
+    "botkit-storage-mongo": "^1.0.7",
     "dashbot": "10.4.5",
     "debug": "^2.3.3",
-    "express": "^4.14.0",
     "dotenv": "^7.0.0",
+    "express": "^4.14.0",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.6.11",
+    "path": "^0.12.7",
+    "pluralize": "^8.0.0",
+    "q": "^2.0.3",
     "querystring": "^0.2.0",
     "request": "^2.79.0",
-    "botkit-storage-mongo": "^1.0.7",
-    "mongoose": "^5.6.11",
-    "lodash": "^4.17.15",
-    "q": "^2.0.3",
-    "path": "^0.12.7",
-    "axios": "^0.19.0",
     "rss-parser": "^3.7.2"
   },
   "devDependencies": {},
