fixing the env.example.

--- a/env.example
+++ b/env.example
@@ -8,7 +8,7 @@ clientSigningSecret=
 verificationToken=
 
 # Dashbot Configuration
-DASHBOT_API_KEY=S
+DASHBOT_API_KEY=
 
 # Mongo Configuration
 MONGODB_URI=mongodb://
